--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   #----------------------------------- Cassanra cluster
   cassandra1:
     build: ./docker/cassandra
+    restart: "on-failure:100"
     networks:
       app:
         ipv4_address: 172.16.238.10
@@ -12,6 +13,7 @@ services:
 
   cassandra2:
     build: ./docker/cassandra
+    restart: "on-failure:100"
     networks:
       app:
         ipv4_address: 172.16.238.11
@@ -20,6 +22,7 @@ services:
 
   cassandra3:
     build: ./docker/cassandra
+    restart: "on-failure:100"
     networks:
       app:
         ipv4_address: 172.16.238.12
@@ -42,6 +45,18 @@ services:
     networks:
       tools:
         ipv4_address: 172.16.237.7
+
+  diamond:
+    image: lesaux/diamond-containercollector
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /proc:/host_proc:ro
+    environment:
+      - GRAPHITE_HOST=graphite
+      - DOCKER_HOSTNAME=cagrr-node1
+      - INTERVAL=5
+    networks:
+      - tools
   #----------------------------------------- Logs
   # Logstash+logspout
   # Elasticsearch
