Added structured logs

--- a/provision.yml
+++ b/provision.yml
@@ -17,7 +17,7 @@
 - hosts: grafana
   connection: local
   tasks:
-    - name: create datasource in grafana
+    - name: Create datasource in grafana
       uri:
         url: http://172.16.237.30:3000/api/datasources
         HEADER_Content-Type: "application/json"
@@ -30,7 +30,7 @@
         body_format: json
       retries: 5
       delay: 10
-    - name: create dashboards in grafana
+    - name: Create dashboards in grafana
       uri:
         url: http://172.16.237.30:3000/api/dashboards/db
         HEADER_Content-Type: "application/json"
@@ -49,23 +49,28 @@
 - hosts: elk
   connection: local
   tasks:
-    - name: create logstash index in elasticsearch
+    - name: Create indexes in elasticsearch
       uri:
-        url: http://172.16.237.20:9200/.kibana/index-pattern/logstash-*?op_type=create
+        url: http://172.16.237.20:9200/.kibana/index-pattern/{{ item.name }}?op_type=create
         HEADER_Content-Type: "application/json"
         method: POST
-        body: "{{ lookup('file','docker/kibana/index.json') }}"
+        body: "{{ item.pattern }}"
         status_code: 201
         body_format: json
       retries: 10
       delay: 20
+      with_items:
+        - name: logstash-*
+          pattern: '{"title":"logstash-*","timeFieldName":"@timestamp"}'
+        - name: cagrr
+          pattern: '{"title":"cagrr","timeFieldName":"Timestamp"}'
 
     - name: make logstash index as default
       uri:
         url: http://172.16.237.20:9200/.kibana/config/4.5.4/_update
         HEADER_Content-Type: "application/json"
         method: POST
-        body: "{{ lookup('file','docker/kibana/default.json') }}"
+        body: '{"doc":{"defaultIndex":"cagrr"}}'
         status_code: 200
         body_format: json
       retries: 10
