--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     networks:
       app:
         ipv4_address: 172.16.238.10
+    ports:
+        - 7199:7199
+        - 8081:8081
     environment:
       JVM_OPTS: "-Djava.rmi.server.hostname=172.16.238.10"
       LOCAL_JMX: "no"
@@ -131,4 +134,3 @@ networks:
       config:
       - subnet: 172.16.238.0/24
         gateway: 172.16.238.1
-  
