--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,6 @@ services:
     networks:
       app:
         ipv4_address: 172.16.238.10
-    ports:
-        - 7199:7199
-        - 8081:8081
     environment:
       JVM_OPTS: "-Djava.rmi.server.hostname=172.16.238.10"
       LOCAL_JMX: "no"
@@ -22,6 +19,8 @@ services:
         ipv4_address: 172.16.238.11
     environment:
       CASSANDRA_SEEDS: "172.16.238.10"
+      JVM_OPTS: "-Djava.rmi.server.hostname=172.16.238.11"
+      LOCAL_JMX: "no"
 
   cassandra3:
     build: ./docker/cassandra
@@ -31,6 +30,8 @@ services:
         ipv4_address: 172.16.238.12
     environment:
       CASSANDRA_SEEDS: "172.16.238.10"
+      JVM_OPTS: "-Djava.rmi.server.hostname=172.16.238.12"
+      LOCAL_JMX: "no"
 
 #----------------------------------------- Metrics
   # Graphite + Carbon - metric DB and receiver
