--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ install:
     - go get github.com/docker/engine-api/client
     - go get github.com/docker/engine-api/types
     - go get golang.org/x/net/context
+    - go get github.com/jessevdk/go-flags
+    - go get github.com/gliderlabs/logspout
+    - go get github.com/looplab/logspout-logstash
