--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
   - go get gopkg.in/olivere/elastic.v3
   - go get github.com/cyberdelia/go-metrics-graphite
   - go get github.com/rcrowley/go-metrics
-  - go get github.com/s8sg/go_jolokia
+  - go get github.com/melnikk/go_jolokia
   - go get github.com/lytics/gowrapmx4j
   - go get github.com/gocql/gocql
   - go get github.com/docker/engine-api/client
