--- a/pkg/config.yml
+++ b/pkg/config.yml
@@ -4,10 +4,4 @@ clusters:
     port: 8080
     interval: 1w
     keyspaces:
-      - space1
-      - space2
-  - host: 127.0.0.1
-    port: 8080
-    interval: 2w
-    keyspaces:
-      - space1
+      - testspace
