--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ env:
 
 install:
 - make test
-- $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
+- $HOME/gopath/bin/gover
+- $HOME/gopath/bin/goveralls -coverprofile=gover.coverprofile -service=travis-ci -repotoken $COVERALLS_TOKEN
 
 script:
 - make packages
