--- a/pkg/config.yml
+++ b/pkg/config.yml
@@ -3,9 +3,7 @@ host: localhost
 port: 8080
 clusters:
   - name: Test cluster
-    interval: 1w
+    interval: 160h
     keyspaces:
       - name: testspace
-        tables:
-          - name: testtable
-            slices: 10
+        slices: 10
