--- a/pkg/config.yml
+++ b/pkg/config.yml
@@ -1,4 +1,5 @@
 ---
+buffer: 5
 conn:
   host: localhost
   port: 8080
@@ -7,4 +8,3 @@ clusters:
     interval: 160h
     keyspaces:
       - name: testspace
-        slices: 1
