--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,9 @@ sudo: required
 
 go:
 - 1.7
-
+cache: false
+sudo: true
 before_install:
-- sudo apt-get -qq update
-- sudo apt-get install -y rpm ruby-dev gcc make
-- gem install fpm
 - make prepare
 
 env:
